fix(subnav): correctly handle overflow

--- a/elements/rh-subnav/rh-subnav.css
+++ b/elements/rh-subnav/rh-subnav.css
@@ -10,7 +10,7 @@
   display: flex;
 }
 
-[part='links'] {
+#link-container {
   display: flex;
   position: relative;
   bottom: 0;
